--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ jQuery(window).on('load',  function() {
 									<div id="aside" class="span3">
 						<!-- Begin Right Sidebar -->
 						<div class="well _menu"><h3 class="page-header">Main Menu</h3><ul class="nav menu mod-list">
-<li class="item-101 default current active"><a href="/index.php" >Home</a></li></ul>
+<li class="item-101 default current active"><a href="/index.html" >Home</a></li></ul>
 </div>
 						<!-- End Right Sidebar -->
 					</div>
