--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Home</title>
 	<link href="/templates/protostar/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 	<link href="/templates/protostar/css/template.css?491d75d19344b3da3eaa5c13fc7ed636" rel="stylesheet" />
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+	<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" /> -->
 	<style>
 
 	h1, h2, h3, h4, h5, h6, .site-title {
